# sprinkle

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  example_config.toml
.github/workflows/: ci.yml  publish.yml
.reuse/: dep5
src/: lib.rs  main.rs  settings.rs  source_linker.rs  utils.rs
tests/: source_linker_test.rs
