[package]
name = "sprinkle"
version = "0.1.0"
authors = ["Jade Meskill <jade.meskill@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
walkdir = "2"
config = "0.10"
shellexpand = "2.0"
dirs = "3.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
simplelog = "^0.7.6"
log = "0.4.11"

[features]
termcolor = []

default = ["termcolor"]
