# SPDX-FileCopyrightText: © 2022 Jade Meskill
#
# SPDX-License-Identifier: MIT

[package]
name = "sprinkle"
version = "0.2.2"
authors = ["Jade Meskill <jade.meskill@gmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.13", features = ["derive", "env"] }
walkdir = "2"
config = "0.11"
shellexpand = "2.1"
dirs = "4.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
simplelog = "^0.11.2"
log = "0.4.14"

[features]
termcolor = []
default = ["termcolor"]
